# lxtrace

./: CHANGELOG.md  Cargo.toml  data.json  f.py  f.txt  j.json  log.txt  magic.json  magic.ktrace
.github/workflows/: deploy.yml
src/: backtrace.rs  chan.rs  child.rs  lib.rs  magic.pest  magic.rs  main.rs  syscall_decode.rs  syscall_spec.rs  tracer.rs
src/magic/: hir.rs  parse_tree.rs  raw.rs  ty.rs
src/magic/hir/: lower.rs  ty_collect.rs  ty_db.rs
