[package]
name = "ktrace"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.1"
libc = "0.2.54"
nix = "0.13.0"
serde = {version = "1.0.91", features = ["derive"]}
serde_json = "1.0.39"
tiny-nix-ipc = { git = "https://github.com/mikailbag/tiny-nix-ipc", features = ["ser_json"] }
pest = "2.1.1"
pest_derive = "2.1.0"
structopt = "0.2.16"
