[package]
name = "lxtrace"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "linux system call tracer, similar to strace"
repository = "https://github.com/mikailbag/lxtrace"

[dependencies]
crossbeam = "0.7.2"
libc = "0.2.65"
nix = "0.16.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tiny-nix-ipc = {version = "0.1.1", features = ["ser_json"]}
pest = "2.1.2"
pest_derive = "2.1.0"
structopt = "0.3.3"
anyhow = "1.0.14"
rstack = {version = "0.3.1", default-features = false, features = ["unwind"]}
rustc-demangle = "0.1.16"
cpp_demangle = "0.2.13"
